# SmokeSimulation

./: .gitignore  BLOG.md  CMakeLists.txt  LICENSE  README.md
src/: main.c  simulation.c  simulation.h
